[package]
name = "stacks-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Max Karou <maxkarou@protonmail.com>"]
repository = "https://github.com/52/stacks.rs"
description = "A minimal rust toolkit to interact with the Stacks Blockchain."
keywords = ["stacks", "blockchain", "bitcoin"]

[dependencies]
bip39 = "2.0.0"
bip32 = "0.5.1"
dyn-clone = "1.0.16"
ripemd = "0.1.3"
thiserror = "1.0.29"

[dependencies.secp256k1]
version = "0.28.2"
features = ["recovery"]

[dependencies.ring]
version = "0.17.7"
features = ["std"]

[dev-dependencies]
rand = "0.8.5"
