[workspace]
resolver = "2"
members = ["stacks", "stacks_derive", "tests"]

[workspace.package]
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Max Karou <maxkarou@protonmail.com>"]
repository = "https://github.com/52/stacks.rs"
categories = ["api-bindings", "cryptography"]
keywords = ["stacks", "stacks-blockchain", "bitcoin"]
