[package]
name = "stacks-rs"
description = "A minimal rust toolkit to interact with the Stacks Blockchain."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
bip39 = "2.0.0"
bip32 = "0.5.1"
dyn-clone = "1.0.16"
ripemd = "0.1.3"
thiserror = "1.0.29"

[dependencies.secp256k1]
version = "0.28.2"
features = ["recovery"]

[dependencies.ring]
version = "0.17.7"
features = ["std"]

[dev-dependencies]
rand = "0.8.5"
