[package]
name = "stacks_derive"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Max Karou <maxkarou@protonmail.com>"]
repository = "https://github.com/52/stacks.rs"
description = "Derive implementations for stacks.rs"
keywords = ["stacks", "blockchain", "bitcoin", "derive"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.35"
proc-macro2 = "1.0.78"

[dependencies.syn]
version = "2.0.48"
features = ["full"]
