[package]
name = "stacks_derive"
description = "Derive macro implementations for 'stacks.rs'"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20.5"
proc-macro2 = "1.0.78"
quote = "1.0.35"

[dependencies.syn]
version = "2.0.48"
features = ["full"]
